--- a/MVC5Demo/MVC5Demo.csproj
+++ b/MVC5Demo/MVC5Demo.csproj
@@ -168,6 +168,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\TEST.cshtml" />
     <Content Include="Views\TEST\Index.cshtml" />
+    <Content Include="Views\TEST\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
