--- a/MVC5Demo/MVC5Demo.csproj
+++ b/MVC5Demo/MVC5Demo.csproj
@@ -170,6 +170,8 @@
     <Content Include="Views\TEST\Index.cshtml" />
     <Content Include="Views\TEST\Create.cshtml" />
     <Content Include="Views\TEST\Edit.cshtml" />
+    <Content Include="Views\TEST\Details.cshtml" />
+    <Content Include="Views\TEST\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
